--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,11 @@
     	<h2>Formulaire:</h2>
     	<div class="form-group"><h3>Renseignements:</h3>
 			<label id="name-label" for="name">Nom:</label>
-			<input type="text" name="name" id="name" class="form-control" placeholder="votre nom" required>		
+			<input type="text" name="name" id="name" class="form-control" placeholder="votre nom" required><br />		
 			<label id="email-label" for="email">Email:</label>
-			<input type="email" name="email" id="email" class="form-control" placeholder="votre email" required="email">
+			<input type="email" name="email" id="email" class="form-control" placeholder="votre email" required="email"><br />
 			<label id="number-label" for="number">TéléPhone:</label>
-			<input type="number" min="0000000000" max="9999999999"name="number" id="number" class="form-control" placeholder="votre numéro" required>
+			<input type="number" min="0000000000" max="9999999999"name="number" id="number" class="form-control" placeholder="votre numéro" required><br />
 			<label id="Age-label" for="number">Age<span>(optionnel)</span>:</label>
 			<input type="number" min="16" max="120"name="number" id="Age" class="form-control" placeholder="votre age">				
 		</div>
@@ -67,7 +67,7 @@
 		</div>
 
 		<div class="form-group">
-			<p>Vous avez une suggestion ou un commentaire?</p>
+			<h3>Vous avez une suggestion ou un commentaire?</h3>
 			<textarea id="comments" class="input-textarea" name="comment" placeholder="Pour un peu plus précisions"></textarea>
 		</div>
 
@@ -84,7 +84,9 @@
     <div class="clear"></div>
 
     <aside class="side_bare"><h3>Nos partenaires</h3></aside>
-    <a href="https://judocommercy.com/" title="JudoCommercy"><img class='partenaires' src="img/judoCommercy.png"></a> <a href="http://www.alohagrafic.com" title="alohagrafic.com"><img class='partenaires' src="img/alohaGrafic.png"></a> <a href="http://www.immobelis.com" title="immobelis.com"><img class='partenaires' src="img/immobelis.jpeg"></a>
+      <a href="https://judocommercy.com/" title="JudoCommercy" target="_blank"><img class='partenaires' src="img/judoCommercy.png"></a>
+      <a href="http://www.alohagrafic.com" title="alohagrafic.com" target="_blank"><img class='partenaires' src="img/alohaGrafic.png"></a>
+      <a href="http://www.immobelis.com" title="immobelis.com" target="_blank"><img class='partenaires' src="img/immobelis.jpeg"></a>
     </aside>
 
   </main>
