--- a/event.html
+++ b/event.html
@@ -28,8 +28,8 @@
             On prépare cela dans le week-end et on vous proposera une distribution dès la semaine prochaine 😉</p>
         </aside>
         <aside class="article"><span><h3>Reprise activités du club</h3></span>
+          <a href="img/reprise_activite_club.jpg" target="_blank"><img  class="thumbnail" src="img/reprise_activite_club.jpg" alt="reprise_activite_club"></a>
           <p>Petit point sur la situation...</p>
-          <img  class="thumbnail" src="img/reprise_activite_club.jpg" alt="reprise_activite_club">
         </aside>
         <aside class="article"><span><h3>Mise à jour covid</h3></span>
           <p>Chers licenciés,
@@ -39,18 +39,9 @@
             Dès que nous aurons plus d'informations on vous avertis.</p>
         </aside>
         <aside class="article"><span><h3>Le nouveau tatami arrive!!!</h3></span>
-          <p> les nouveaux tapis ont été commandés arrivés courant le mois de décembre. 
+          <p> les nouveaux tapis ont été commandés arrivée courant le mois de décembre. 
             Prenez soin de vous et à très bientôt  courage à tous et malgré tout bonne fêtes à tous.</p>
         </aside>
-        <aside class="article"><span><h3>Horaires et accès</h3></span>
-          <p></p>
-        </aside>
-        <aside class="article"><span><h3>Comment adhérer</h3></span>
-          <p></p>
-        </aside>
-        <aside class="article"><span><h3>Tarifs saison 2020/2021:</h3></span>
-          <p> 
-          </p>
 
     <div class="clear"></div>
 </div>
@@ -58,7 +49,9 @@
     <div class="clear"></div>
 
     <aside class="side_bare"><h3>Nos partenaires</h3></aside>
-    <a href="https://judocommercy.com/" title="JudoCommercy"><img class='partenaires' src="img/judoCommercy.png"></a> <a href="http://www.alohagrafic.com" title="alohagrafic.com"><img class='partenaires' src="img/alohaGrafic.png"></a> <a href="http://www.immobelis.com" title="immobelis.com"><img class='partenaires' src="img/immobelis.jpeg"></a>
+      <a href="https://judocommercy.com/" title="JudoCommercy" target="_blank"><img class='partenaires' src="img/judoCommercy.png"></a>
+      <a href="http://www.alohagrafic.com" title="alohagrafic.com" target="_blank"><img class='partenaires' src="img/alohaGrafic.png"></a>
+      <a href="http://www.immobelis.com" title="immobelis.com" target="_blank"><img class='partenaires' src="img/immobelis.jpeg"></a>
     </aside>
 
   </main>
