--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             Pour les enfants 4-5 ans, la Fédération a mis en place l’éveil Judo. Pédagogie adaptée qui permet le développement physique et intellectuel des très jeunes pratiquants. Le programme éveil-judo est délibérément construit, autour de l’intérêt de l’enfant, pour faciliter ses futurs apprentissages du judo et des activités sportives et artistiques en général.</p>
         </aside>
         <aside class="article"><span><h3>Code moral du Judo</h3></span>
-          <img class="thumbnail" src="img/code_moral_Judo.jpg" alt="code_moral">
+          <a href="img/code_moral_Judo.jpg" target="_blank"><img class="thumbnail" src="img/code_moral_Judo.jpg" alt="code_moral"></a>
           <p>Le judo véhicule des valeurs fondamentales qui s'imbriquent les unes dans les autres pour édifier une formation morale. Le respect de ce code est la condition première, la base de la pratique du judo.</p>
         </aside>
         <aside class="article"><span><h3>Présentation de l'équipe</h3></span>
@@ -74,7 +74,9 @@
     <div class="clear"></div>
 
     <aside class="side_bare"><h3>Nos partenaires</h3></aside>
-    <a href="https://judocommercy.com/" title="JudoCommercy"><img class='partenaires thumbnail' src="img/judoCommercy.png"></a> <a href="http://www.alohagrafic.com" title="alohagrafic.com"><img class='partenaires' src="img/alohaGrafic.png"></a> <a href="http://www.immobelis.com" title="immobelis.com"><img class='partenaires' src="img/immobelis.jpeg"></a>
+      <a href="https://judocommercy.com/" title="JudoCommercy" target="_blank"><img class='partenaires' src="img/judoCommercy.png"></a>
+      <a href="http://www.alohagrafic.com" title="alohagrafic.com" target="_blank"><img class='partenaires' src="img/alohaGrafic.png"></a>
+      <a href="http://www.immobelis.com" title="immobelis.com" target="_blank"><img class='partenaires' src="img/immobelis.jpeg"></a>
     </aside>
 
   </main>
