--- a/sales.html
+++ b/sales.html
@@ -30,7 +30,9 @@
     <div class="clear"></div>
 
     <aside class="side_bare"><h3>Nos partenaires</h3></aside>
-    <a href="https://judocommercy.com/" title="JudoCommercy"><img class='partenaires' src="img/judoCommercy.png"></a> <a href="http://www.alohagrafic.com" title="alohagrafic.com"><img class='partenaires' src="img/alohaGrafic.png"></a> <a href="http://www.immobelis.com" title="immobelis.com"><img class='partenaires' src="img/immobelis.jpeg"></a>
+      <a href="https://judocommercy.com/" title="JudoCommercy" target="_blank"><img class='partenaires' src="img/judoCommercy.png"></a>
+      <a href="http://www.alohagrafic.com" title="alohagrafic.com" target="_blank"><img class='partenaires' src="img/alohaGrafic.png"></a>
+      <a href="http://www.immobelis.com" title="immobelis.com" target="_blank"><img class='partenaires' src="img/immobelis.jpeg"></a>
     </aside>
 
   </main>
